[gd_scene load_steps=19 format=3 uid="uid://xa1t73lsf7d2"]

[ext_resource type="PackedScene" uid="uid://bon7ywv24hl73" path="res://entities/abilities/ability.tscn" id="1_sef4d"]
[ext_resource type="Script" uid="uid://mwu0hahe560x" path="res://entities/abilities/ability_models/precipice_blades/precipice_blades.gd" id="2_8qiki"]
[ext_resource type="Shader" uid="uid://colb4bkfqrtx6" path="res://entities/abilities/ability_models/precipice_blades/precipice_blades.gdshader" id="2_u36ey"]
[ext_resource type="Resource" uid="uid://8xguqcblf7ii" path="res://entities/abilities/ability_models/precipice_blades/precipice_blades.tres" id="3_f65cc"]
[ext_resource type="AudioStream" uid="uid://0wraqsd63axn" path="res://entities/abilities/ability_models/precipice_blades/sword_swing.wav" id="5_r6ecg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f65cc"]
height = 1.0
radius = 5.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_u36ey"]
noise_type = 2
fractal_gain = 4.0
cellular_distance_function = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8qiki"]
height = 128
seamless = true
noise = SubResource("FastNoiseLite_u36ey")

[sub_resource type="Gradient" id="Gradient_8qiki"]
offsets = PackedFloat32Array(0, 0.0850202, 0.176113, 0.319838)
colors = PackedColorArray(0.294118, 0, 0.509804, 1, 0.501961, 0, 1, 1, 0.698039, 0.4, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_f65cc"]
gradient = SubResource("Gradient_8qiki")

[sub_resource type="Gradient" id="Gradient_u36ey"]
offsets = PackedFloat32Array(0.4, 0.42, 0.44)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8qiki"]
gradient = SubResource("Gradient_u36ey")

[sub_resource type="Gradient" id="Gradient_f65cc"]
offsets = PackedFloat32Array(0.1, 0.2, 0.4, 0.45, 0.5)
colors = PackedColorArray(1, 1, 1, 1, 0.498039, 0.498039, 0.498039, 1, 0, 0, 0, 1, 0.498039, 0.498039, 0.498039, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r6ecg"]
gradient = SubResource("Gradient_f65cc")

[sub_resource type="Gradient" id="Gradient_em6w2"]
offsets = PackedFloat32Array(0.2, 0.4, 0.45)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3hpjx"]
gradient = SubResource("Gradient_em6w2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8qiki"]
render_priority = 0
shader = ExtResource("2_u36ey")
shader_parameter/progress = 0.0
shader_parameter/derive_progress = 1.0
shader_parameter/ease_progress = 0.0
shader_parameter/time_scale = 1.0
shader_parameter/anim_rot_amt = 1.0
shader_parameter/base_noise = SubResource("NoiseTexture2D_8qiki")
shader_parameter/width_gradient_mask = SubResource("GradientTexture1D_3hpjx")
shader_parameter/length_gradient_mask = SubResource("GradientTexture1D_r6ecg")
shader_parameter/highlight = SubResource("GradientTexture1D_8qiki")
shader_parameter/zoom = 0.4
shader_parameter/rotate_all = 200.0
shader_parameter/emission_strength = 1.0
shader_parameter/mix_strength = 1.0
shader_parameter/color_lookup = SubResource("GradientTexture1D_f65cc")

[sub_resource type="QuadMesh" id="QuadMesh_f65cc"]
size = Vector2(10, 10)

[node name="PrecipiceBlades" instance=ExtResource("1_sef4d")]
script = ExtResource("2_8qiki")
strike_amount = 2
current_ability = ExtResource("3_f65cc")

[node name="SlashTimer" type="Timer" parent="." index="1"]
one_shot = true

[node name="HitArea" type="Area3D" parent="." index="2"]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea" index="0"]
shape = SubResource("CylinderShape3D_f65cc")

[node name="CPUParticles3D" type="CPUParticles3D" parent="HitArea" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("ShaderMaterial_8qiki")
emitting = false
amount = 3
lifetime = 0.5
one_shot = true
preprocess = 0.1
speed_scale = 0.75
mesh = SubResource("QuadMesh_f65cc")
gravity = Vector3(0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource("5_r6ecg")
bus = &"SFX"

[connection signal="timeout" from="SlashTimer" to="." method="_on_slash_timer_timeout"]
